# marketsim

./: .gitignore  README.md  pyproject.toml  requirements.txt
marketsim/: __init__.py  __main__.py  amounts.py  api.py  clob.py  engine.py  enums.py  execution.py  instrument.py  market.py  microstruct.py  modes.py  player.py  sim_time.py  sim_tr.py  tui.py
marketsim/static/: index.html
