[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "marketsim"
version = "0.1.0"
description = "Terminal market simulation (stocks & crypto-style dynamics)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "rich>=13.0",
    "fastapi>=0.100",
    "uvicorn[standard]>=0.22",
]

[project.scripts]
marketsim = "marketsim.__main__:main"

[tool.hatch.build.targets.wheel.force-include]
"marketsim/static" = "marketsim/static"

[tool.ruff]
line-length = 100
target-version = "py310"
